1->EnergizerOfflineOrderCSVProcessor.java,try-catch added within the for loop to avoid prepare email throw exception.
2->email-enviroment set up made for both templated and non-templated emails(*subject*.vm)files also modified for same reason

3->messages/base_en.properties/es.properties modified for password reset(message) and container utilization concerns.

4->product/productDetailsPanel.tag file modified to avoid segment,group and family to be displayed on product details page.

5->cart/cartPage.jsp modified to add disclaimer for container utilization.

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -130,7 +130,8 @@ basket.validation.unavailable=Unfortunately {0} was removed from your cart as it
 basket.view.basket=View basket
 basket.your.shopping.basket=Your Shopping Basket
 
-basket.your.shopping.container.utilization=Container Utilization
+basket.your.shopping.container.utilization=CONTAINER UTILIZATION
+basket.your.shopping.container.utilization1=<br><br>Please note that depending on your loading preferences, the order may be modified to fit the container
 basket.your.shopping.container.utilization.volume=Volume
 basket.your.shopping.container.utilization.weight=Weight
 basket.your.shopping.estimatedleadtime=Estimated lead time
