--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -129,7 +129,10 @@ basket.validation.noStock=Unfortunately <a href=\"{1}\">{0}</a> was removed from
 basket.validation.unavailable=Unfortunately {0} was removed from your cart as it is no longer available.
 basket.view.basket=Ver carrito
 basket.your.shopping.basket=Su carro de compras
-basket.your.shopping.container.utilization=Utilizaci\u00F3n de contenedor
+
+#basket.your.shopping.container.utilization=Utilizaci\u00F3n de contenedor
+basket.your.shopping.container.utilization=UTILIZACIÓN DE CONTENEDORES
+basket.your.shopping.container.utilization1=<br><br>Tenga en cuenta que dependiendo de sus preferencias de carga , la orden puede ser modificado para adaptarse al contenedor
 basket.your.shopping.container.utilization.volume=Volumen
 basket.your.shopping.container.utilization.weight=Peso
 basket.your.shopping.estimatedleadtime=Tiempo estimado de ejecuci\u00F3n :
@@ -379,8 +382,10 @@ profile.checkNewPassword.invalid=Por favor,confirme su nueva contrase\u00F1a
 profile.checkPwd=Confirmar Contrase\u00F1a
 profile.checkPwd.invalid=Por favor confirme su contrase\u00F1a
 profile.currentPassword=contrase\u00F1a actual
-profile.currentPassword.invalid=Por favor ingrese su contrase\u00F1a actual
 
+#profile.currentPassword.invalid=Por favor ingrese su contrase\u00F1a actual
+
+profile.currentPassword.invalid=Please entrar correcta contraseña existente
 profile.email=Direcci\u00F3n De Correo Electr\u00F3nico
 profile.email.invalid=Por favor,ingrese una direcci\u00F3n de correo electr\u00F3nico v\u00E1lida
 profile.email.unique=La direcci\u00F3n de correo electr\u00F3nico que ha introducido no est\u00E1 disponible
@@ -1410,7 +1415,10 @@ updatePwd.checkPwd=Confirmar Contrase\u00F1a
 updatePwd.checkPwd.invalid=Por favor,confirme su contrase\u00F1a
 updatePwd.description=Por favor,ingrese una nueva contrase\u00F1a.
 updatePwd.pwd=Contrase\u00F1a
-updatePwd.pwd.invalid=Por favor,ingrese una contrase\u00F1a segura de por lo menos6 caracteres
+
+#updatePwd.pwd.invalid=Por favor,ingrese una contrase\u00F1a segura de por lo menos6 caracteres
+
+updatePwd.pwd.invalid=Por favor, introduzca una contraseña que cumpla con las siguientes condiciones: <br>1) Mínimo 6 caracteres <br>2) Al menos una letra mayúscula <br> 3)Al menos una letra minúscula <br> 4) Al menos un número <br> 5) Al menos un carácter especial (!, $, #,%) <br> 6) Sin espacios <br> 7) Su contraseña no podrá ser igual a ninguna de las 5 contraseñas anteriores <br> 8) Las contraseñas son sensibles a mayúsculas y minúsculas
 updatePwd.submit=Actualizar contrase\u00F1a
 updatePwd.title=Actualizar contrase\u00F1a
 updatePwd.token.invalid=El enlace utilizado para acceder a la p\u00E1gina de actualizaci\u00F3n no es v\u00E1lido.
@@ -1429,8 +1437,9 @@ usergroup.uid.invalid.pattern=Por favor seleccione un identificador de grupo de 
 usergroup.unit.invalid=Por favor seleccione una unidad matriz de negocio
 usergroup.yes.button=Si
 validation.checkEmail.equals=La direcci\u00F3n de correo electr\u00F3nico no coincide,por favor ingr\u00E9sela de nuevo
-validation.checkPwd.equals=La contrase\u00F1a y la confirmaci\u00F3n de la contrase\u00F1a no coinciden
+#validation.checkPwd.equals=La contrase\u00F1a y la confirmaci\u00F3n de la contrase\u00F1a no coinciden
 
+validation.checkPwd.equals=Por favor verifique las contraseñas introducidas , las contraseñas no coinciden
 product.grid.yourPrice=Tu Precio
 product.grid.availability=disponibilidad
 product.grid.futurestock.refresh=Update Future
