--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1545,4 +1545,5 @@ reorder.cmirinactive=Product {0} removed from  your catalog , so cannot be Reord
 cart.cmirinactive = Product[s] {0} in cart , no longer available in your Catalog.
 
 catalog.download.success=Catalog is successfully downloaded to your Download Folder
-
+container.height=Container Height1
+packing.type=Packing Type
