Modified password messages.

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -318,7 +318,7 @@ order.form=Order Form
 order.form.total=Order Form Total
 
 password.strength.medium      = Medium
-password.strength.minchartext = Minimum length is %d characters
+password.strength.minchartext = Minimum length is %d characters and should contain one Upper case, one Lower case, one Numeric & one Special character
 password.strength.strong      = Strong
 password.strength.tooshortpwd = Too short
 password.strength.verystrong  = Very strong
@@ -1425,7 +1425,7 @@ updatePwd.checkPwd=Confirm Password
 updatePwd.checkPwd.invalid=Please confirm your password
 updatePwd.description=Please enter a new password.
 updatePwd.pwd=Password
-updatePwd.pwd.invalid=Please enter a password which satisfies the following condition: <br> 1) Minimum 6 characters <br> 2) Atleast one letter upper case <br> 3) Atleast one letter lower case <br> 4) Atleast one numeric <br> 5) Atleast one special character among (!$#%) <br> 6) No spaces <br> 7)Your password cannot be reset to any of the previously used 5 passwords <br> 8)Passwords are case sensitive
+updatePwd.pwd.invalid=Please enter a password which satisfies the following condition: <br> 1) Minimum 6 characters <br> 2) Atleast one letter upper case <br> 3) Atleast one letter lower case <br> 4) Atleast one numeric <br> 5) Atleast one special character among (!$#%) <br> 6) No spaces <br> 7) Your password cannot be reset to any of the previously used 5 passwords <br> 8) Passwords are case sensitive
 updatePwd.submit=Update Password
 updatePwd.title=Update Password
 updatePwd.token.invalid=The link used to access the update page was invalid.
@@ -1545,4 +1545,7 @@ reorder.cmirinactive=Product {0} removed from  your catalog , so cannot be Reord
 cart.cmirinactive = Product[s] {0} in cart , no longer available in your Catalog.
 
 catalog.download.success=Catalog is successfully downloaded to your Download Folder
+container.height=Container Height
+packing.type=Packing Type
 
+basket.your.shopping.container.optimization=CONTAINER OPTIMIZATION
