Code related to container utilization is updated

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1551,3 +1551,4 @@ packing.type=Packing Type
 basket.your.shopping.container.optimization=CONTAINER OPTIMIZATION
 product.notadded.container=Following products cannot be added to the container with the selected Packing type and container height.
 product.notdoublestacked=Following products cannot be double stacked, Please change your cart for better optimization
+basket.page.doubleStackProduct=Double stacked products
