Changes related to enable/disable ,code cleaning

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1552,3 +1552,9 @@ basket.your.shopping.container.optimization=CONTAINER OPTIMIZATION
 product.notadded.container=Following products cannot be added to the container with the selected Packing type and container height.
 product.notdoublestacked=Following products cannot be double stacked, Please change your cart for better optimization
 basket.page.doubleStackProduct=Double stacked products
+product.not.fitted.container=Please reduce  products fom the cart
+select.different.container=Please select the different container height
+enable.radiobutton=Enable Container Optimization
+disable.radiobutton=Disable Container Optimization
+product.doublestacking.notavailable=No product is available for double stacking
+product.doublestacking.notrequired=No product is required for double stacking
