NA_POC related files

--- a/bin/custom/energizer/energizercore/hmc/resources/com/energizer/core/hmc/locales_en.properties
+++ b/bin/custom/energizer/energizercore/hmc/resources/com/energizer/core/hmc/locales_en.properties
@@ -27,6 +27,11 @@ energizer.metricunit.description=EnergizerMetricUnit
 energizer.metricunit.name=EnergizerMetricUnit
 energizer.shippingpoint.description=EnergizerShippingPoint
 energizer.shippingpoint.name=EnergizerShippingPoint
+energizer.region.description=EnergizerRegion
+energizer.region.name=EnergizerRegion
+energizer.regiongenericproducts.description=EnergizerRegionGenericProducts
+energizer.regiongenericproducts.name=EnergizerRegionGenericProducts
+
 
 type_tree_energizerb2bunit=Energizer B2BUnit
 type_tree_energizerproduct=Energizer Product
@@ -38,3 +43,5 @@ type_tree_energizerb2bcustomer=Energizer B2BCustomer
 type_tree_energizerpricerow=Energizer PriceRow
 type_tree_metricunit=MetricUnit
 type_tree_energizershippingpoint=Energizer ShippingPoint
+type_tree_energizerregion=Energizer Region
+type_tree_energizerregiongenericproducts=EnergizerRegionGenericProducts
