--- a/bin/custom/energizer/energizercore/hmc/resources/com/energizer/core/hmc/locales_es.properties
+++ b/bin/custom/energizer/energizercore/hmc/resources/com/energizer/core/hmc/locales_es.properties
@@ -26,6 +26,10 @@ energizer.metricunit.description=EnergizerMetricUnit
 energizer.metricunit.name=EnergizerMetricUnit
 energizer.shippingpoint.description=EnergizerShippingPoint
 energizer.shippingpoint.name=EnergizerShippingPoint
+energizer.region.description=EnergizerRegion
+energizer.region.name=EnergizerRegion
+energizer.regiongenericproducts.description=EnergizerRegionGenericProducts
+energizer.regiongenericproducts.name=EnergizerRegionGenericProducts
 
 
 type_tree_energizerb2bunit=Energizer B2BUnit
@@ -38,3 +42,5 @@ type_tree_energizerb2bcustomer=Energizer B2BCustomer
 type_tree_energizerpricerow=Energizer PriceRow
 type_tree_metricunit=MetricUnit
 type_tree_energizershippingpoint=Energizer ShippingPoint
+type_tree_energizerregion=Energizer Region
+type_tree_energizerregiongenericproducts=EnergizerRegionGenericProducts
