--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1549,7 +1549,7 @@ container.height=Container Height
 packing.type=Packing Type
 
 basket.your.shopping.container.optimization=CONTAINER OPTIMIZATION
-product.notadded.container=Following products cannot be added to the container with the selected Packing type and container height.
+product.notadded.container=Below mentioned product quantities cannot be added to the container with selected packing type. Please reduce product quantities
 product.notdoublestacked=Following products cannot be double stacked, Please change your cart for better optimization
 basket.page.doubleStackProduct=Double stacked products
 product.not.fitted.container=Please reduce  products fom the cart
@@ -1558,3 +1558,9 @@ enable.radiobutton=Enable Container Optimization
 disable.radiobutton=Disable Container Optimization
 product.doublestacking.notavailable=No product is available for double stacking
 product.doublestacking.notrequired=No product is required for double stacking
+
+errorMessages.erpmaterialid=ERPMaterial ID
+errorMessages.Quantity=Quantity
+enable.containerOptimization=Enable Container Optimization
+disable.containerOptimization=Disable Container Optimization
+product.doubleStacked.clickhere=CLICK HERE 
