Changes made related to: 1)Adding Floor Space graphics for enable part. 2)Modification in error messages as suggested 3)Updating phone number and email ID in Contact US.

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1545,22 +1545,24 @@ reorder.cmirinactive=Product {0} removed from  your catalog , so cannot be Reord
 cart.cmirinactive = Product[s] {0} in cart , no longer available in your Catalog.
 
 catalog.download.success=Catalog is successfully downloaded to your Download Folder
-container.height=Container Height
-packing.type=Packing Type
+container.height=Container Type
+packing.type=Container Packing Material
 
-basket.your.shopping.container.optimization=CONTAINER OPTIMIZATION
-product.notadded.container=Below mentioned product quantities cannot be added to the container with selected packing type. Please reduce product quantities
+basket.your.shopping.container.optimization=Update Container Utilization
+product.notadded.container=Dear Customer, below mentioned product quantities cannot be added to the container with selected container packing material. Please add other Double Stack products by clicking CLICK HERE link
 product.notdoublestacked=Following products cannot be double stacked, Please change your cart for better optimization
 basket.page.doubleStackProduct=Double stacked products
 product.not.fitted.container=Please reduce  products fom the cart
 select.different.container=Please select the different container height
 enable.radiobutton=Enable Container Optimization
 disable.radiobutton=Disable Container Optimization
-product.doublestacking.notavailable=No product is available for double stacking
-product.doublestacking.notrequired=No product is required for double stacking
+product.doublestacking.notavailable=Fine
+product.doublestacking.notrequired=Fine
 
 errorMessages.erpmaterialid=ERPMaterial ID
 errorMessages.Quantity=Quantity
 enable.containerOptimization=Enable Container Optimization
 disable.containerOptimization=Disable Container Optimization
 product.doubleStacked.clickhere=CLICK HERE 
+
+basket.your.shopping.container.utilization.floorSpace = Floor Space
