changes made in bae_en.properties

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -84,11 +84,11 @@ basket.page.unitPrice=Ordering Unit price
 basket.page.prdCode=Product
 basket.page.cmirId=Customer Material ID
 basket.page.shipFrom=Ship From
-basket.page.uom=Unit Of Ordering
-basket.page.baseuom.convertion=No Of Each
+basket.page.uom=Unit of Measure
+basket.page.baseuom.convertion=Number of Each
 basket.page.moq=Minimum Ordering Quantity
 basket.page.customerMaterialId=Customer Material ID
-basket.page.customerProductName=Customer Product Name
+basket.page.customerProductName=Customer Product Description
 basket.page.MaterialId=Material ID
 basket.page.Weight=Weight
 basket.page.weightUom=Weight UOM
@@ -130,7 +130,7 @@ basket.validation.unavailable=Unfortunately {0} was removed from your cart as it
 basket.view.basket=View basket
 basket.your.shopping.basket=Your Shopping Basket
 
-basket.your.shopping.container.utilization=CONTAINER UTILIZATION
+basket.your.shopping.container.utilization=Update Container Utilization
 basket.your.shopping.container.utilization1=<br><br>Please note that depending on your loading preferences, the order may be modified to fit the container
 basket.your.shopping.container.utilization.volume=Volume
 basket.your.shopping.container.utilization.weight=Weight
@@ -510,7 +510,7 @@ search.page.linkPreviousPage=Previous Page
 search.page.searchText=You searched for "{0}"
 search.page.searchText.exceptTerm=You searched for
 search.page.showAllResults=Show all
-search.page.showPageResults=Show paginated
+search.page.showPageResults=Show Pages
 search.page.sortTitle=Sort by\:
 search.page.totalResults={0} Products found
 search.placeholder=I'm looking for
@@ -676,7 +676,7 @@ text.account.orderHistory.page.lastPage=&raquo;
 text.account.orderHistory.page.linkNextPage=Next Page
 text.account.orderHistory.page.linkPreviousPage=Previous Page
 text.account.orderHistory.page.showAllResults=Show all
-text.account.orderHistory.page.showPageResults=Show paginated
+text.account.orderHistory.page.showPageResults=Show Pages
 text.account.orderHistory.page.sort.byDate=Date
 text.account.orderHistory.page.sort.byOrderNumber=Order Number
 text.account.orderHistory.page.sortTitle=Sort by\:
@@ -743,7 +743,7 @@ text.account.replenishment.page.lastPage=&raquo;
 text.account.replenishment.page.linkNextPage=Next Page
 text.account.replenishment.page.linkPreviousPage=Previous Page
 text.account.replenishment.page.showAllResults=Show all
-text.account.replenishment.page.showPageResults=Show paginated 
+text.account.replenishment.page.showPageResults=Show Pages 
 text.account.replenishment.page.sort.byDate=Date
 text.account.replenishment.page.sort.byOrderNumber=Order Number
 text.account.replenishment.page.sort.byReplenishmentNumber=Replenishment Number
@@ -780,7 +780,7 @@ text.company.administrators.page.lastPage=&raquo;
 text.company.administrators.page.linkNextPage=Next Page
 text.company.administrators.page.linkPreviousPage=Previous Page
 text.company.administrators.page.showAllResults=Show all
-text.company.administrators.page.showPageResults=Show paginated
+text.company.administrators.page.showPageResults=Show Pages
 text.company.administrators.page.sort.byDate=By Date
 text.company.administrators.page.sort.byName=By Name
 text.company.administrators.page.sort.byUnit=By Parent Unit
@@ -795,7 +795,7 @@ text.company.approvers.page.lastPage=&raquo;
 text.company.approvers.page.linkNextPage=Next Page
 text.company.approvers.page.linkPreviousPage=Previous Page
 text.company.approvers.page.showAllResults=Show all
-text.company.approvers.page.showPageResults=Show paginated 
+text.company.approvers.page.showPageResults=Show Pages 
 text.company.approvers.page.sort.byName=By Name
 text.company.approvers.page.sort.byUnit=By Parent Unit
 text.company.approvers.page.sortTitle=Sort by\:
@@ -837,7 +837,7 @@ text.company.budget.page.lastPage=&raquo;
 text.company.budget.page.linkNextPage=Next Page
 text.company.budget.page.linkPreviousPage=Previous Page
 text.company.budget.page.showAllResults=Show all
-text.company.budget.page.showPageResults=Show paginated
+text.company.budget.page.showPageResults=Show Pages
 text.company.budget.page.sort.byCode=By Id
 text.company.budget.page.sort.byName=By Name
 text.company.budget.page.sort.byUnitName=By Parent Unit
@@ -860,7 +860,7 @@ text.company.children.page.lastPage=&raquo;
 text.company.children.page.linkNextPage=Next Page
 text.company.children.page.linkPreviousPage=Previous Page
 text.company.children.page.showAllResults=Show all
-text.company.children.page.showPageResults=Show paginated
+text.company.children.page.showPageResults=Show Pages
 text.company.children.page.sort.byDate=Date
 text.company.children.page.sort.byName=By Name
 text.company.children.page.sortTitle=Sort by\:
@@ -900,7 +900,7 @@ text.company.costCenter.page.lastPage=&raquo;
 text.company.costCenter.page.linkNextPage=Next Page
 text.company.costCenter.page.linkPreviousPage=Previous Page
 text.company.costCenter.page.showAllResults=Show all
-text.company.costCenter.page.showPageResults=Show paginated
+text.company.costCenter.page.showPageResults=Show Pages
 text.company.costCenter.page.sort.byCode=By Id
 text.company.costCenter.page.sort.byName=By Name
 text.company.costCenter.page.sort.byUnitName=By Parent Unit
@@ -921,7 +921,7 @@ text.company.customers.page.lastPage=&raquo;
 text.company.customers.page.linkNextPage=Next Page
 text.company.customers.page.linkPreviousPage=Previous Page
 text.company.customers.page.showAllResults=Show all
-text.company.customers.page.showPageResults=Show paginated
+text.company.customers.page.showPageResults=Show Pages
 text.company.customers.page.sort.byDate=By Date
 text.company.customers.page.sort.byName=By Name
 text.company.customers.page.sort.byUnit=By Parent Unit
@@ -1059,7 +1059,7 @@ text.company.manageB2BUserGroup.page.lastPage=&raquo;
 text.company.manageB2BUserGroup.page.linkNextPage=Next Page
 text.company.manageB2BUserGroup.page.linkPreviousPage=Previous Page
 text.company.manageB2BUserGroup.page.showAllResults=Show all
-text.company.manageB2BUserGroup.page.showPageResults=Show paginated
+text.company.manageB2BUserGroup.page.showPageResults=Show Pages
 text.company.manageB2BUserGroup.page.sort.byGroupID=By Id
 text.company.manageB2BUserGroup.page.sort.byName=By Name
 text.company.manageB2BUserGroup.page.sort.byUnitName=By Parent Unit
@@ -1105,7 +1105,7 @@ text.company.managePermissions.page.lastPage=&raquo;
 text.company.managePermissions.page.linkNextPage=Next Page
 text.company.managePermissions.page.linkPreviousPage=Previous Page
 text.company.managePermissions.page.showAllResults=Show all
-text.company.managePermissions.page.showPageResults=Show paginated
+text.company.managePermissions.page.showPageResults=Show Pages
 text.company.managePermissions.page.sort.byDate=By Date
 text.company.managePermissions.page.sort.byName=By Name
 text.company.managePermissions.page.sort.byUnitName=By Parent Unit
@@ -1145,7 +1145,7 @@ text.company.manageUser.pageAll.lastPage=&raquo;
 text.company.manageUser.pageAll.linkNextPage=Next Page
 text.company.manageUser.pageAll.linkPreviousPage=Previous Page
 text.company.manageUser.pageAll.showAllResults=Show All
-text.company.manageUser.pageAll.showPageResults=Show paginated
+text.company.manageUser.pageAll.showPageResults=Show Pages
 text.company.manageUser.pageAll.sort.byDate=By Date
 text.company.manageUser.pageAll.sort.byName=By Name
 text.company.manageUser.pageAll.sort.byUnit=By Parent Unit
@@ -1190,7 +1190,7 @@ text.company.managers.page.lastPage=&raquo;
 text.company.managers.page.linkNextPage=Next Page
 text.company.managers.page.linkPreviousPage=Previous Page
 text.company.managers.page.showAllResults=Show all
-text.company.managers.page.showPageResults=Show paginated
+text.company.managers.page.showPageResults=Show Pages
 text.company.managers.page.sort.byName=By Name
 text.company.managers.page.sort.byUnit=By Parent Unit
 text.company.managers.page.sortTitle=Sort by\:
@@ -1219,7 +1219,7 @@ text.company.members.page.lastPage=&raquo;
 text.company.members.page.linkNextPage=Next Page
 text.company.members.page.linkPreviousPage=Previous Page
 text.company.members.page.showAllResults=Show all
-text.company.members.page.showPageResults=Show paginated
+text.company.members.page.showPageResults=Show Pages
 text.company.members.page.sort.byDate=By Date
 text.company.members.page.sort.byName=By Name
 text.company.members.page.sort.byUnit=By Parent Unit
@@ -1247,7 +1247,7 @@ text.company.permissions.page.lastPage=&raquo;
 text.company.permissions.page.linkNextPage=Next Page
 text.company.permissions.page.linkPreviousPage=Previous Page
 text.company.permissions.page.showAllResults=Show all
-text.company.permissions.page.showPageResults=Show paginated
+text.company.permissions.page.showPageResults=Show Pages
 text.company.permissions.page.sort.byDate=By Date
 text.company.permissions.page.sort.byName=By Name
 text.company.permissions.page.sort.byUnitName=By Parent Unit
@@ -1329,7 +1329,7 @@ text.company.usergroups.page.lastPage=&raquo;
 text.company.usergroups.page.linkNextPage=Next Page
 text.company.usergroups.page.linkPreviousPage=Previous Page
 text.company.usergroups.page.showAllResults=Show all
-text.company.usergroups.page.showPageResults=Show paginated
+text.company.usergroups.page.showPageResults=Show Pages
 text.company.usergroups.page.sort.byDate=By Date
 text.company.usergroups.page.sort.byGroupID=By Id
 text.company.usergroups.page.sort.byName=By Name
@@ -1413,7 +1413,7 @@ text.storefinder.desktop.page.linkPreviousPage=Previous
 text.storefinder.desktop.page.sort.byName=By Name
 text.storefinder.desktop.page.sortTitle=Sort by\:
 text.storefinder.desktop.page.showAllResults=Show all
-text.storefinder.desktop.page.showPageResults=Show paginated
+text.storefinder.desktop.page.showPageResults=Show Pages
 text.total=Order Total
 text.updates=Updates
 text.user.disabled=Disabled User
@@ -1467,13 +1467,13 @@ product.grid.in.stock=In Stock
 text.account.quickorder.pageHeading=Quick Order
 text.account.quickorder.yourOrder=Your Order
 text.account.quickorder.noEntries=Why wait? Start Ordering!!
-text.account.quickorder.productCode=Energizer Product Code
+text.account.quickorder.productCode=Edgewell Product Code
 text.account.quickorder.customerProductCode=Distributor Product Code
 text.account.quickorder.unitOfMeasure=Unit Of Measure
 text.account.quickorder.quantity=Quantity
 text.account.quickorder.actions=Actions
 text.account.quickorder.link=Quick Order
-quickorder.addtocart.nocmir=No such product mapped to the distributor.
+quickorder.addtocart.nocmir=Product code is not valid.
 quickorder.addtocart.cmir.badData= No proper data for Ordering Unit or UOM.
 text.account.quickorder.continueToCheckout=Continue to Checkout
 text.account.quickorder.resetOrderForm=Reset Order Form
@@ -1512,7 +1512,7 @@ text.account.orderHistory.notApplicable=Not Applicable
 text.account.orderHistory.SAPorderNumber =  Order Number 
 text.account.orderHistory.orderType = Order Type
 text.account.MOQ = MOQ
-text.account.Customer.Product.Name= Customer Product Name
+text.account.Customer.Product.Name= Customer Product Description
 text.account.Customer.Specific.Price= Customer Specific Price
 text.account.Shipped.Quantity = Shipped Quantity
 text.order.viewInvoice = View Invoice
@@ -1551,16 +1551,16 @@ packing.type=Container Packing Material
 basket.your.shopping.container.optimization=Update Container Utilization
 product.notadded.container=Dear Customer, below mentioned product quantities cannot be added to the container with selected container packing material. Please add other Double Stack products by clicking CLICK HERE link
 product.notdoublestacked=Following products cannot be double stacked, Please change your cart for better optimization
-basket.page.doubleStackProduct=Double stacked products
-product.not.fitted.container=Please reduce  products fom the cart
-select.different.container=Please select the different container height
+basket.page.doubleStackProduct=Double Stack Status
+product.not.fitted.container=Please reduce  products from the cart
+select.different.container=Please select the different container type
 enable.radiobutton=Enable Container Optimization
 disable.radiobutton=Disable Container Optimization
 product.doublestacking.notavailable=Fine
 product.doublestacking.notrequired=Fine
 
-errorMessages.erpmaterialid=ERPMaterial ID
-errorMessages.Quantity=Quantity
+errorMessages.erpmaterialid=Product Code
+errorMessages.Quantity= Exceeded Quantity
 enable.containerOptimization=Enable Container Optimization
 disable.containerOptimization=Disable Container Optimization
 product.doubleStacked.clickhere=CLICK HERE 
