1. Changes made to calculate floorSpace Graphics. 2. added a property floorSpaceProductsMap in energizerfacades-beans.xml 3. calculation changes in container.js to display floorSpace Graphics horizontally 4. error message changed in energizercore-locales_en.properties 5. cartPageCOntroller and excelUplocaPageController classes were changed for adding floorSpaceProductsMap

--- a/bin/custom/energizer/energizercore/resources/localization/energizercore-locales_en.properties
+++ b/bin/custom/energizer/energizercore/resources/localization/energizercore-locales_en.properties
@@ -68,7 +68,7 @@ basket.page.moq.notexists=MOQ does not exist for this product.
 shippingpoint.business.rule.shipfromnotvalid=Shipping point for Material #{0} is not the same as the item(s) already in the cart.
 shippingpoint.business.rule.shipfromnotfound=The shipping point of Material #{0} is not found.
 
-container.business.rule.orderExceeded=Dear Customer, You have exceeded the limit. Please adjust the cart.
+container.business.rule.orderExceeded=Dear Customer, your order will not fit in one container. Please, adjust the cart and/or place multiple orders. 
 container.business.rule.orderblocked=Your account is blocked and you cannot place an order right now. Please contact customer service.
 
 
