Changes made in Error messages as suggested by Tamara

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1294,6 +1294,7 @@ text.company.units.remove.confirmation.title.b2badmingroup=Confirm removal of B2
 text.company.units.remove.confirmation.title.b2bapprovergroup=Confirm removal of B2B Approver
 text.company.units.remove.confirmation.title.b2bcustomergroup=Confirm removal of B2B Customer
 text.company.units.remove.confirmation.title.b2bmanagergroup=Confirm removal of B2B Manager
+text.company.unit.packingType=Default Packing Type
 text.company.user.dr.name=Dr.
 text.company.user.email=Email\:
 text.company.user.miss.name=Miss
@@ -1549,7 +1550,7 @@ container.height=Container Type
 packing.type=Container Packing Material
 
 basket.your.shopping.container.optimization=Update Container Utilization
-product.notadded.container=Dear Customer, below mentioned product quantities cannot be added to the container with selected container packing material. Please add other Double Stack products by clicking CLICK HERE link
+product.notadded.container=Dear Customer, below mentioned product quantities cannot be added to the container with selected container packing material. Please add other products by clicking Matching Double Stackable Product Link in the last column of the Cart table
 product.notdoublestacked=Following products cannot be double stacked, Please change your cart for better optimization
 basket.page.doubleStackProduct=Double Stack Status
 product.not.fitted.container=Please reduce  products from the cart
