Following changes are made: 1) New country with code AN is added. 2) minor changes in UI and code related to container utilization

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -80,7 +80,7 @@ basket.page.message.update.reducedNumberOfItemsAdded.noStock={0} has been remove
 basket.page.cartId=Cart ID\:
 basket.page.free=FREE
 basket.page.itemPrice=Item price
-basket.page.unitPrice=Ordering Unit price
+basket.page.unitPrice=Unit Price
 basket.page.prdCode=Product
 basket.page.cmirId=Customer Material ID
 basket.page.shipFrom=Ship From
@@ -130,8 +130,8 @@ basket.validation.unavailable=Unfortunately {0} was removed from your cart as it
 basket.view.basket=View basket
 basket.your.shopping.basket=Your Shopping Basket
 
-basket.your.shopping.container.utilization=Update Container Utilization
-basket.your.shopping.container.utilization1=<br><br>Please note that depending on your loading preferences, the order may be modified to fit the container
+basket.your.shopping.container.utilization=Container Utilization
+basket.your.shopping.container.utilization1=<br><br>Declaimer: Please note that depending on your loading preferences, the order may be modified to fit the container or container may not be fully utilized.
 basket.your.shopping.container.utilization.volume=Volume
 basket.your.shopping.container.utilization.weight=Weight
 basket.your.shopping.estimatedleadtime=Estimated lead time
@@ -318,7 +318,7 @@ order.form=Order Form
 order.form.total=Order Form Total
 
 password.strength.medium      = Medium
-password.strength.minchartext = Minimum length is %d characters
+password.strength.minchartext = Minimum length is %d characters and should contain one Upper case, one Lower case, one Numeric & one Special character
 password.strength.strong      = Strong
 password.strength.tooshortpwd = Too short
 password.strength.verystrong  = Very strong
@@ -1294,7 +1294,6 @@ text.company.units.remove.confirmation.title.b2badmingroup=Confirm removal of B2
 text.company.units.remove.confirmation.title.b2bapprovergroup=Confirm removal of B2B Approver
 text.company.units.remove.confirmation.title.b2bcustomergroup=Confirm removal of B2B Customer
 text.company.units.remove.confirmation.title.b2bmanagergroup=Confirm removal of B2B Manager
-text.company.unit.packingType=Default Packing Type
 text.company.user.dr.name=Dr.
 text.company.user.email=Email\:
 text.company.user.miss.name=Miss
@@ -1426,7 +1425,7 @@ updatePwd.checkPwd=Confirm Password
 updatePwd.checkPwd.invalid=Please confirm your password
 updatePwd.description=Please enter a new password.
 updatePwd.pwd=Password
-updatePwd.pwd.invalid=Please enter a password which satisfies the following condition: <br> 1) Minimum 6 characters <br> 2) Atleast one letter upper case <br> 3) Atleast one letter lower case <br> 4) Atleast one numeric <br> 5) Atleast one special character among (!$#%) <br> 6) No spaces <br> 7)Your password cannot be reset to any of the previously used 5 passwords <br> 8)Passwords are case sensitive
+updatePwd.pwd.invalid=Please enter a password which satisfies the following condition: <br> 1) Minimum 6 characters <br> 2) Atleast one letter upper case <br> 3) Atleast one letter lower case <br> 4) Atleast one numeric <br> 5) Atleast one special character among (!$#%) <br> 6) No spaces <br> 7) Your password cannot be reset to any of the previously used 5 passwords <br> 8) Passwords are case sensitive
 updatePwd.submit=Update Password
 updatePwd.title=Update Password
 updatePwd.token.invalid=The link used to access the update page was invalid.
@@ -1557,13 +1556,13 @@ product.not.fitted.container=Please reduce  products from the cart
 select.different.container=Please select the different container type
 enable.radiobutton=Enable Container Optimization
 disable.radiobutton=Disable Container Optimization
-product.doublestacking.notavailable=Fine
-product.doublestacking.notrequired=Fine
+product.doublestacking.notavailable= Product Couldn't be Double Stacked
+product.doublestacking.notrequired= Fine
 
 errorMessages.erpmaterialid=Product Code
 errorMessages.Quantity= Exceeded Quantity
 enable.containerOptimization=Enable Container Optimization
 disable.containerOptimization=Disable Container Optimization
-product.doubleStacked.clickhere=CLICK HERE 
+product.doubleStacked.clickhere=Matching Double Stackable Product Link 
 
-basket.your.shopping.container.utilization.floorSpace = Floor Space
+basket.your.shopping.container.utilization.floorSpace = PAL Stack
