Spanish version added

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1294,6 +1294,7 @@ text.company.units.remove.confirmation.title.b2badmingroup=Confirm removal of B2
 text.company.units.remove.confirmation.title.b2bapprovergroup=Confirm removal of B2B Approver
 text.company.units.remove.confirmation.title.b2bcustomergroup=Confirm removal of B2B Customer
 text.company.units.remove.confirmation.title.b2bmanagergroup=Confirm removal of B2B Manager
+text.company.unit.packingType=Default Packing Type
 text.company.user.dr.name=Dr.
 text.company.user.email=Email\:
 text.company.user.miss.name=Miss
@@ -1564,5 +1565,6 @@ errorMessages.Quantity= Exceeded Quantity
 enable.containerOptimization=Enable Container Optimization
 disable.containerOptimization=Disable Container Optimization
 product.doubleStacked.clickhere=Matching Double Stackable Product Link 
+errormessage.greaterthan.totalpalletcount=Dear Customer, your order will not fit in one container. You can order maximum {0} PAL in one order with selected container packing material. Please, adjust the cart and/or place multiple orders.
 
 basket.your.shopping.container.utilization.floorSpace = PAL Stack
