Changes made: 1) In DefaultEnergizerCartService.java to display 0% in volume container 2) Changes floor spce in base_es.properties 2) Global messages modification

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -1555,4 +1555,4 @@ disable.containerOptimization=Desactivar optimizaci\u00F3n del contenedor
 product.doubleStacked.clickhere=Link de b\u00FAsqueda del producto de apilado doble 
 errormessage.greaterthan.totalpalletcount=Estimado cliente, su pedido no cabe en un contenedor. Usted puede pedir un m\u00E0ximo de {0} PAL en una orden con el material de embalaje de contenedor seleccionado . Por favor , ajuste el carrito de compra y / o ingrese m\u00FAltiples \u00F3rdenes .
 
-basket.your.shopping.container.utilization.floorSpace = Floor Space
+basket.your.shopping.container.utilization.floorSpace = PAL Stack
