Changed the label for container height and packing option in email and order history page

--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderConfirmation_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderConfirmation_en.properties
@@ -42,5 +42,5 @@ erpMaterialId=ERP Material Id
 note=Note:This is an automatically generated email. Please do not reply to this mail.
 termsUrl=http://edgewell.com/legal/
 faqUrl=http://edgewell.com/legal/
-containerHeight=Container Height
-containerPackingType=Container Packing Type
+containerHeight=Container Type
+containerPackingType=Container Packing Material
