--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1529,6 +1529,8 @@ text.account.orderHistory.orderNumber = Reference Number
 text.account.orderHistory.orderPlaced= Order Placed On 
 text.account.orderHistory.orderStatus =Order Status
 text.account.orderHistory.poNumber  =P.O.Number
+text.account.orderHistory.containerType=Container Type
+text.account.orderHistory.containerPackingMaterial=Container Packing Material
 text.approval.process.already.completed=This order reference is already approved/rejected by another approver. 
 
 text.account.quickorder.enterwholenumber=Enter a whole number
