--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderConfirmation_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderConfirmation_en.properties
@@ -4,8 +4,8 @@
 emailSubject=Edgewell Order Number {0}  approved
 myAccount=My Account
 storeFinder=Store Finder
-salutation=Hi
-thankYouForOrder= Order number {0} is approved.Order details are as below:
+salutation=Dear {0}
+thankYouForOrder= Order number {0} (PO# {1}) is approved.Order details are as below:
 quantity=Quantity
 itemPrice=Price(USD)
 total=Total Price(USD)
@@ -44,3 +44,4 @@ termsUrl=http://edgewell.com/legal/
 faqUrl=http://edgewell.com/legal/
 containerHeight=Container Type
 containerPackingType=Container Packing Material
+orderTotal=Order Total
