Changes made to add b2bunit in approved order email

--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderConfirmation_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderConfirmation_en.properties
@@ -4,8 +4,8 @@
 emailSubject=Edgewell Order Number {0}  approved
 myAccount=My Account
 storeFinder=Store Finder
-salutation=Dear {0}
-thankYouForOrder= Order number {0} (PO# {1}) is approved.Order details are as below:
+salutation=Dear {0}, {1}
+thankYouForOrder= Thank you for order. Order number {0} (PO# {1}) is approved.Order details are as below:
 quantity=Quantity
 itemPrice=Price(USD)
 total=Total Price(USD)
